tests/src/Loader/classloader/generics/Instantiation/Positive/Types.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
  <PropertyGroup>
    <AssemblyName>Types</AssemblyName>
    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
    <OutputType>Library</OutputType>
    <CLRTestKind>BuildOnly</CLRTestKind>
    <CLRTestPriority>0</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup />
  <ItemGroup>
    <Compile Include="Types.il" />
  </ItemGroup>
  <ItemGroup />
</Project>