tests/src/Loader/classloader/generics/Instantiation/Negative/abstract10.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
  <PropertyGroup>
    <AssemblyName>abstract10</AssemblyName>
    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
    <OutputType>Exe</OutputType>
    <CLRTestKind>BuildAndRun</CLRTestKind>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup />
  <ItemGroup>
    <Compile Include="abstract10.il" />
  </ItemGroup>
  <ItemGroup />
  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
</Project>